--- a/schedule-en.html
+++ b/schedule-en.html
@@ -122,8 +122,7 @@
         <div class="col s12">
             <ul class="tabs tabs-fixed-width">
                 <li class="tab"><a href="#talks" class="active">Talks</a></li>
-                <li class="tab"><a href="#contests">Contests</a></li>
-		<li class="tab"><a href="#teams">Team presentations</a></li>
+                <li class="tab"><a href="#contests">Interactive session</a></li>
             </ul>
         </div>
         <div id="talks" class="col s12">
