New 'about Open School' for czech speaking visitors

--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-	    <p>Open House je každoroční akce, při které Red Hat otevírá své dveře veřejnosti a ukazuje všechno (nebo skoro všechno, oblečení si necháme na sobě, pokud Vám to nevadí) co vytvořil. Při této akci se můžete dozvědět o všech týmech, které kouzlí v největším inženýrském centru Red Hatu na světě.</p>
-	    <p>Připravte si tedy své chuťové pohárky pro velkou škálu témat, které zahrnují, avšak nejsou zaměřené jen na, Fedoru, vývoj v různých programovacích jazycích, testování, bezbečnost, JBoss, celosvětovou podporu, psaní dokumentace, stáže a mnoho více. Uslyšíte přednášky, otestujete své schopnosti v soutěžích a budete si moci promluvit přímo se zástupci jednotlivých týmů ohledně možnosti stát se součástí naší více než tisíci členné rodiny v Brně.</p>
-	    <p>Toto všechno bude probíhat v moderním prostředí naší nejnovější budovy TPB-B, která se nachází na konečné zastávce tramvajové linky 12 (Technologický park) na ulici Purkyňova 647/111 ve středu 5. dubna. Dveře jsou Vám otevřeny od 13:00 a celý program bude probíhat až do 19:00.</p>
-	    <p>Jediné, co je zapotřebí udělat, je zaregistrovat se (viz výše) a přijít. A nebojte se, pokud zapomenete, můžete se stále zaregistrovat při vstupu, kde Vám registraci vyřídí naši ochotní dobrovolníci.</p>
+	    <p>Open School je obdobou našeho každoročního dne otevřených dveří, avšak primárně se zaměřuje na studenty středních škol. Na Open School se budete moci hlavně zúčastnit přednášek, které nevyžadují nějaké rozsáhlé technické znalosti, ale kladou si za úkol dané technologie představit a ukázat jejich použití v praxi. </p>
+	    <p>Pozvánku na Open School každoročně dostávají pedagogové IT na středních školách, kteří ze svých tříd vyberou žáky, kteří mají největší zájem a předpoklady odnést si z této akce užitečné informace anebo motivaci.</p>
+	    <p>Open School 2017 se koná v nejnovější budově Red Hatu TPB-B v Technologickém parku na ulici Purkyňova 647/111. Akce začíná v 9 hodin ráno a pokračuje až do 13 hodin. Žáci můžou přijít kdykoli v tomto časovém rozpětí podle toho, které přednášky je zajímají. Není tedy nutné přijít ráno přesně na 9 hodinu, ani zůstávat až do konce.</p>
           </div>
         </div>
       </div>
