Prepare for OpenSchool 2018

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open School 2017">
+    <meta property="og:title" content="Open School 2018">
     <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://openschool.redhat.com">
     <meta property="og:image" content="https://openschool.redhat.com/imgs/banner.png">
-    <title>Open School 2017</title>
+    <title>Open School 2018</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
@@ -111,7 +111,7 @@
         <div class="row">
           <div class="col-sm-8 intro-content">
             <div class="tagline">NAŠE DVEŘE JSOU VÁM OTEVŘENÉ</div>
-	    <div class="tagline">29. BŘEZNA | 09:00 - 13:00</div>
+	    <div class="tagline">4. DUBNA | 09:00 - 13:00</div>
 
             <div class="intro-text">
 		Registrace na tuto akci je prostřednictvím pozvánky, nicméně, pokud se Vaše střední škola chce této akce zúčastnit a pozvánku neobdržela, neváhejte nás <a href="mailto:mhrusovs@redhat.com">kontaktovat</a>.
@@ -125,13 +125,13 @@
 
     <!-- About Section -->
     <section id="about" class="about-section">
-      <h2>O Open School 2017</h2>
+      <h2>O Open School 2018</h2>
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
 	    <p>Open School je obdobou našeho každoročního dne otevřených dveří, avšak primárně se zaměřuje na studenty středních škol. Na Open School se budete moci hlavně zúčastnit přednášek, které nevyžadují nějaké rozsáhlé technické znalosti, ale kladou si za úkol dané technologie představit a ukázat jejich použití v praxi. </p>
 	    <p>Pozvánku na Open School každoročně dostávají pedagogové IT na středních školách, kteří ze svých tříd vyberou žáky, kteří mají největší zájem a předpoklady odnést si z této akce užitečné informace anebo motivaci.</p>
-	    <p>Open School 2017 se koná v nejnovější budově Red Hatu TPB-B v Technologickém parku na ulici Purkyňova 647/111. Akce začíná v 9 hodin ráno a pokračuje až do 13 hodin. Žáci můžou přijít kdykoli v tomto časovém rozpětí podle toho, které přednášky je zajímají. Není tedy nutné přijít ráno přesně na 9 hodinu, ani zůstávat až do konce.</p>
+	    <p>Open School 2018 se koná v nejnovější budově Red Hatu TPB-B v Technologickém parku na ulici Purkyňova 647/111. Akce začíná v 9 hodin ráno a pokračuje až do 13 hodin. Žáci můžou přijít kdykoli v tomto časovém rozpětí podle toho, které přednášky je zajímají. Není tedy nutné přijít ráno přesně na 9 hodinu, ani zůstávat až do konce.</p>
           </div>
         </div>
       </div>
@@ -141,8 +141,7 @@
     <section id="venue" class="venue-section">
       <h2>Mapa akce</h2>
       <div style="width: 100%; height: 100%">
-         <!-- <object type="image/svg+xml" data="imgs/devconf_17_map_v03.1.svg" style="width: 100%; height: 100%">Váš prohlížeč nepodporuje formát SVG</object>-->
-	<center><h3>Mapa bude uveřejněna v nejbližších dnech</h3></center>
+         <img src="imgs/map.png" style="width: 100%; height: 100%"/>
       </div>
     </section>
 
