--- a/schedule-en.html
+++ b/schedule-en.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open School 2017">
+    <meta property="og:title" content="Open School 2018">
     <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://openschool.redhat.com">
@@ -30,8 +30,8 @@
     <link type="text/css" rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="css/fontawesome-stars.css">
-    <link type="text/css" rel="stylesheet" href="css/global.css">
-    <link type="text/css" rel="stylesheet" href="css/web.css">
+<!--<link type="text/css" rel="stylesheet" href="css/global.css">
+    <link type="text/css" rel="stylesheet" href="css/web.css">-->
 
     <!-- Overpass font -->
     <link href="fonts/overpass.css" rel="stylesheet">
@@ -72,7 +72,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Open School 2017 - Sessions</title>
+    <title>Open School 2018 - Sessions</title>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-top" data-offset="250">
@@ -103,7 +103,7 @@
       <!-- /.container -->
     </nav>
 <section id="schedule" class="schedule-section">
-<div class="loading-container">
+<!--<div class="loading-container">
     <div class="preloader-wrapper big active">
         <div class="spinner-layer spinner-blue-only">
             <div class="circle-clipper left">
@@ -235,7 +235,8 @@
             <a href="#!" id="google-sign-in" class="modal-action waves-effect waves-green btn-flat">Ok</a>
         </div>
     </div>
-</div>
+</div>-->
+<center>COMING SOON in early March!</center>
 </section>
     <footer id="footer" class="footer-section">
        <div class="container">
