--- a/speakers.html
+++ b/speakers.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open School 2017">
+    <meta property="og:title" content="Open School 2018">
     <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://openschool.redhat.com">
@@ -26,8 +26,8 @@
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link type="text/css" rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-    <link type="text/css" rel="stylesheet" href="css/global.css">
-    <link type="text/css" rel="stylesheet" href="css/web.css">
+<!--<link type="text/css" rel="stylesheet" href="css/global.css">
+    <link type="text/css" rel="stylesheet" href="css/web.css">-->
 
     <!-- Overpass font -->
     <link href="fonts/overpass.css" rel="stylesheet">
@@ -68,7 +68,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Open School 2017 - Řečníci</title>
+    <title>Open School 2018 - Řečníci</title>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-top" data-offset="250">
@@ -99,7 +99,7 @@
       <!-- /.container -->
     </nav>
 <section id="speakers" class="speakers-section">
-<div class="loading-container">
+<!--<div class="loading-container">
 
     <div class="preloader-wrapper big active">
         <div class="spinner-layer spinner-blue-only">
@@ -141,7 +141,8 @@
         </div>
     </div>
 
-</div>
+</div>-->
+<center>Informace budou uveřejněny v průběhu března!</center>
 </section>
     <footer id="footer" class="footer-section">
        <div class="container">
