--- a/index-en.html
+++ b/index-en.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open School 2017">
+    <meta property="og:title" content="Open School 2018">
     <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://openschool.redhat.com">
     <meta property="og:image" content="https://openschool.redhat.com/imgs/banner.png">
-    <title>Open School 2017</title>
+    <title>Open School 2018</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
@@ -111,7 +111,7 @@
         <div class="row">
           <div class="col-sm-8 intro-content">
             <div class="tagline">OUR DOORS ARE OPEN</div>
-	    <div class="tagline">29th of March | 09:00 - 13:00</div>
+	    <div class="tagline">4th of April | 09:00 - 13:00</div>
 
             <div class="intro-text">
 		Registration is by invitation, however, if your high-school would like to participate and hasn’t been invited, please <a href="mailto:mhrusovs@redhat.com">contact us</a>.
@@ -127,13 +127,13 @@
 
     <!-- About Section -->
     <section id="about" class="about-section">
-      <h2>About Open School 2017</h2>
+      <h2>About Open School 2018</h2>
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
 	    <p>Open House is an annual event, where Red Hat opens its doors to the public to show off everything (or almost everything, we’ll keep our clothes on, if you don’t mind) that is being done under the hood. You’ll be able to find out about all the teams that do their magic in the largest engineering office of Red Hat in the world.</p>
 	    <p>So prepare your tastebuds for a range of topics that will include but will not be restricted to Fedora, development in various languages, quality assurance, security, JBoss, Global Support, technical writing, internships and more. You’ll be able to hear talks, test your skills in competitions and talk directly to team representatives about opportunities to becoming part of our 1000+ family in Brno.</p>
-	    <p>All that will be available in the modern spaces of our newest building TPB-B at the last stop of tram number 12 (Technology park), at Purkyňova 647/111 on Wednesday, 5th of April. The doors open at 13:00 and we’ll be going until 19:00.</p>
+	    <p>All that will be available in the modern spaces of our newest building TPB-B at the last stop of tram number 12 (Technology park), at Purkyňova 647/111 on Wednesday, 11th of March. The doors open at 13:00 and we’ll be going until 19:00.</p>
 	    <p>All you have to do is register (see above) and show up. And don’t worry, if you forget to register, you can still do so upon entry, our handsome volunteers will take care of that.</p>
           </div>
         </div>
@@ -144,8 +144,7 @@
     <section id="venue" class="venue-section">
       <h2>Map of venue</h2>
       <div style="width: 100%; height: 100%">
-          <!--<object type="image/svg+xml" data="imgs/devconf_17_map_v03.1.svg" style="width: 100%; height: 100%">Your browser does not support SVG</object>-->
-	  <center><h3>Coming soon.</h3></center>
+         <img src="imgs/map.png" style="width: 100%; height: 100%"/>
       </div>
     </section>
 
