--- a/speakers-en.html
+++ b/speakers-en.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open School 2017">
+    <meta property="og:title" content="Open School 2018">
     <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://openschool.redhat.com">
@@ -19,8 +19,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/global.js"></script>
-    <script type="text/javascript" src="js/speakers.js"></script>
+<!--    <script type="text/javascript" src="js/global.js"></script>
+    <script type="text/javascript" src="js/speakers.js"></script>-->
 
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
@@ -68,7 +68,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Open School 2017 - Speakers</title>
+    <title>Open School 2018 - Speakers</title>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-top" data-offset="250">
@@ -99,7 +99,7 @@
       <!-- /.container -->
     </nav>
 <section id="speakers" class="speakers-section">
-<div class="loading-container">
+<!--<div class="loading-container">
 
     <div class="preloader-wrapper big active">
         <div class="spinner-layer spinner-blue-only">
@@ -141,7 +141,8 @@
         </div>
     </div>
 
-</div>
+</div>-->
+<center>COMING SOON in early March!</center>
 </section>
     <footer id="footer" class="footer-section">
        <div class="container">
