--- a/index-en.html
+++ b/index-en.html
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-8 intro-content">
-            <div class="tagline">OUR DOORS ARE OPEN</div>
+            <div class="tagline">OUR DOORS WILL BE OPEN</div>
 	    <div class="tagline">4th of April | 09:00 - 13:00</div>
 
             <div class="intro-text">
