--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-8 intro-content">
-            <div class="tagline">NAŠE DVEŘE JSOU VÁM OTEVŘENÉ</div>
+            <div class="tagline">NAŠE DVEŘE VÁM BUDOU OTEVŘENÉ</div>
 	    <div class="tagline">4. DUBNA | 09:00 - 13:00</div>
 
             <div class="intro-text">
