Push schedule and speakers page alive

--- a/schedule.html
+++ b/schedule.html
@@ -30,8 +30,8 @@
     <link type="text/css" rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="css/fontawesome-stars.css">
-<!--    <link type="text/css" rel="stylesheet" href="css/global.css">
-    <link type="text/css" rel="stylesheet" href="css/web.css">-->
+    <link type="text/css" rel="stylesheet" href="css/global.css">
+    <link type="text/css" rel="stylesheet" href="css/web.css">
 
     <!-- Overpass font -->
     <link href="fonts/overpass.css" rel="stylesheet">
@@ -103,7 +103,7 @@
       <!-- /.container -->
     </nav>
 <section id="schedule" class="schedule-section">
-<!--<div class="loading-container">
+<div class="loading-container">
     <div class="preloader-wrapper big active">
         <div class="spinner-layer spinner-blue-only">
             <div class="circle-clipper left">
@@ -235,8 +235,7 @@
             <a href="#!" id="google-sign-in" class="modal-action waves-effect waves-green btn-flat">Ok</a>
         </div>
     </div>
-</div>-->
-<center>Informace budou uveřejněny v průběhu března!</center>
+</div>
 </section>
     <footer id="footer" class="footer-section">
        <div class="container">
