--- a/speakers.html
+++ b/speakers.html
@@ -26,8 +26,8 @@
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link type="text/css" rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-<!--<link type="text/css" rel="stylesheet" href="css/global.css">
-    <link type="text/css" rel="stylesheet" href="css/web.css">-->
+    <link type="text/css" rel="stylesheet" href="css/global.css">
+    <link type="text/css" rel="stylesheet" href="css/web.css">
 
     <!-- Overpass font -->
     <link href="fonts/overpass.css" rel="stylesheet">
@@ -99,7 +99,7 @@
       <!-- /.container -->
     </nav>
 <section id="speakers" class="speakers-section">
-<!--<div class="loading-container">
+<div class="loading-container">
 
     <div class="preloader-wrapper big active">
         <div class="spinner-layer spinner-blue-only">
@@ -141,8 +141,7 @@
         </div>
     </div>
 
-</div>-->
-<center>Informace budou uveřejněny v průběhu března!</center>
+</div>
 </section>
     <footer id="footer" class="footer-section">
        <div class="container">
