--- a/sched2.html
+++ b/sched2.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open House 2018">
-    <meta property="og:site_name" content="openhouse.redhat.com">
+    <meta property="og:title" content="Open School 2018">
+    <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://openhouse.redhat.com">
-    <meta property="og:image" content="https://openhouse.redhat.com/imgs/openhouse_logo.png">
+    <meta property="og:url" content="https://openschool.redhat.com">
+    <meta property="og:image" content="https://openschool.redhat.com/imgs/banner.png">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
@@ -21,7 +21,7 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/jquery.barrating.min.js"></script>
     <script type="text/javascript" src="js/global.js"></script>
-    <script type="text/javascript" src="js/sessions.js"></script> 
+    <script type="text/javascript" src="js/sessions.js"></script>
 
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
@@ -67,12 +67,12 @@
     <!-- Leaflet JavaScript -->
     <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
 
-    <!-- OpenHouse style -->
-    <link href="css/openhouse.css" rel="stylesheet">
+    <!-- Open School style -->
+    <link href="css/openschool.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Open House 2018 - Sessions</title>
+    <title>Open School 2018 - Sessions</title>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-top" data-offset="250">
@@ -84,22 +84,14 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="hidden-lg"><a href="index.html#page-top">Home</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="speakers.html">Speakers</a></li>
-            <li><a href="index.html#venue">Venue</a></li>
+            <li class="hidden-lg"><a href="index-en.html#page-top">Home</a></li>
+            <li><a href="schedule-en.html">Schedule</a></li>
+            <li><a href="speakers-en.html">Speakers</a></li>
+            <li><a href="index-en.html#venue">Venue</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right social">
-            <li><a href="https://www.facebook.com/events/422112554869179/" class="fa fa-facebook-official" title="Facebook">
-                <span class="hide">Facebook</span>
-            </a></li>
-
-<!--            <li><a href="https://plus.google.com/u/0/b/113358324864673318624/events/c2uruk15uo91omcfpqdr8sbes9o?authkey=COG586zb0Iv4eA" class="fa fa-google-plus" title="Google+">
-                <span class="hide">Google+</span>
-            </a></li>-->
-
-           <li><a href="schedule-cz.html" title="Česká verze">
+           <li><a href="schedule.html" title="Česká verze">
                 <i class="famfamfam-flag-cz"></i>
             </a></li>
           </ul>
@@ -130,8 +122,7 @@
         <div class="col s12">
             <ul class="tabs tabs-fixed-width">
                 <li class="tab"><a href="#talks" class="active">Talks</a></li>
-                <li class="tab"><a href="#contests">Contests</a></li>
-		<li class="tab"><a href="#teams">Team presentations</a></li>
+                <li class="tab"><a href="#contests">Interactive session</a></li>
             </ul>
         </div>
         <div id="talks" class="col s12">
