--- a/speakers-en.html
+++ b/speakers-en.html
@@ -19,8 +19,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-<!--    <script type="text/javascript" src="js/global.js"></script>
-    <script type="text/javascript" src="js/speakers.js"></script>-->
+    <script type="text/javascript" src="js/global.js"></script>
+    <script type="text/javascript" src="js/speakers.js"></script>
 
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
@@ -99,7 +99,7 @@
       <!-- /.container -->
     </nav>
 <section id="speakers" class="speakers-section">
-<!--<div class="loading-container">
+<div class="loading-container">
 
     <div class="preloader-wrapper big active">
         <div class="spinner-layer spinner-blue-only">
@@ -141,8 +141,7 @@
         </div>
     </div>
 
-</div>-->
-<center>COMING SOON in early March!</center>
+</div>
 </section>
     <footer id="footer" class="footer-section">
        <div class="container">
