--- a/cz/index-en.html
+++ b/cz/index-en.html
@@ -6,38 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open School 2018">
+    <meta property="og:title" content="Open School 2019">
     <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://openschool.redhat.com">
     <meta property="og:image" content="https://openschool.redhat.com/imgs/banner.png">
-    <title>Open School 2018</title>
+    <title>Open School 2019</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/imgs/favicon.png" type="image/png">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Overpass font -->
-    <link href="fonts/overpass.css" rel="stylesheet">
-    <link href="fonts/overpass-mono.css" rel="stylesheet">
+    <link href="/fonts/overpass.css" rel="stylesheet">
+    <link href="/fonts/overpass-mono.css" rel="stylesheet">
 
     <!-- Font Awesome 4.6.3 -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
 
     <!-- FamFamFam flag icons -->
-    <link rel="stylesheet" href="css/famfamfam-flags.css">
+    <link rel="stylesheet" href="/css/famfamfam-flags.css">
 
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
 
     <!-- Custom CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="/css/scrolling-nav.css" rel="stylesheet">
 
     <!-- Open School style -->
-    <link href="css/openschool.css" rel="stylesheet">
+    <link href="/css/openschool.css" rel="stylesheet">
 
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css">
@@ -87,13 +87,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="#intro" onclick="scroll_to_section('#page-top')">Home</a></li>
-            <li><a href="schedule-en.html">Schedule</a></li>
-            <li><a href="speakers-en.html">Speakers</a></li>
+            <li><a href="/cz/schedule-en.html">Schedule</a></li>
+            <li><a href="/cz/speakers-en.html">Speakers</a></li>
             <li><a href="#venue" onclick="scroll_to_section('#venue')">Venue</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right social">
-	   <li><a href="index.html" title="Česká verze">
+	   <li><a href="/cz/index.html" title="Česká verze">
                 <i class="famfamfam-flag-cz"></i>
             </a></li>
           </ul>
@@ -127,7 +127,7 @@
 
     <!-- About Section -->
     <section id="about" class="about-section">
-      <h2>About Open School 2018</h2>
+      <h2>About Open School 2019</h2>
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
@@ -144,7 +144,7 @@
     <section id="venue" class="venue-section">
       <h2>Map of venue</h2>
       <div style="width: 100%; height: 100%">
-         <img src="imgs/map.png" style="width: 100%; height: 100%"/>
+         <img src="/imgs/map.png" style="width: 100%; height: 100%"/>
       </div>
     </section>
 
@@ -153,7 +153,7 @@
 
     <footer id="footer" class="footer-section">
        <div class="container">
-	<a href="https://www.redhat.com/en/global/czech-republic" title="Red Hat Czech, s.r.o."><img src="imgs/Logo_RH.png"></a>
+	<a href="https://www.redhat.com/en/global/czech-republic" title="Red Hat Czech, s.r.o."><img src="/imgs/Logo_RH.png"></a>
        </div>
        <div class="container">
           <!-- Participation Agreements Section -->
