--- a/cz/schedule.html
+++ b/cz/schedule.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open School 2018">
+    <meta property="og:title" content="Open School 2019">
     <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://openschool.redhat.com">
     <meta property="og:image" content="https://openschool.redhat.com/imgs/banner.png">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/imgs/favicon.png" type="image/png">
 
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -29,26 +29,26 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link type="text/css" rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" href="css/fontawesome-stars.css">
-    <link type="text/css" rel="stylesheet" href="css/global.css">
-    <link type="text/css" rel="stylesheet" href="css/web.css">
+    <link type="text/css" rel="stylesheet" href="/css/fontawesome-stars.css">
+    <link type="text/css" rel="stylesheet" href="/css/global.css">
+    <link type="text/css" rel="stylesheet" href="/css/web.css">
 
     <!-- Overpass font -->
-    <link href="fonts/overpass.css" rel="stylesheet">
-    <link href="fonts/overpass-mono.css" rel="stylesheet">
+    <link href="/fonts/overpass.css" rel="stylesheet">
+    <link href="/fonts/overpass-mono.css" rel="stylesheet">
 
     <!-- Font Awesome 4.6.3 -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
 
     <!-- FamFamFam flag icons -->
-    <link rel="stylesheet" href="css/famfamfam-flags.css">
+    <link rel="stylesheet" href="/css/famfamfam-flags.css">
 
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
 
     <!-- Custom CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="/css/scrolling-nav.css" rel="stylesheet">
 
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css">
@@ -68,11 +68,11 @@
     <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
 
     <!-- Open School style -->
-    <link href="css/openschool.css" rel="stylesheet">
+    <link href="/css/openschool.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Open School 2018 - Program</title>
+    <title>Open School 2019 - Program</title>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-top" data-offset="250">
@@ -84,14 +84,14 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="hidden-lg"><a href="index.html#page-top">Domů</a></li>
-            <li><a href="schedule.html">Program</a></li>
-            <li><a href="speakers.html">Řečníci</a></li>
-            <li><a href="index.html#venue">Místo konání</a></li>
+            <li class="hidden-lg"><a href="/cz/index.html#page-top">Domů</a></li>
+            <li><a href="/cz/schedule.html">Program</a></li>
+            <li><a href="/cz/speakers.html">Řečníci</a></li>
+            <li><a href="/cz/index.html#venue">Místo konání</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right social">
-           <li><a href="schedule-en.html" title="English version">
+           <li><a href="/cz/schedule-en.html" title="English version">
                 <i class="famfamfam-flag-us"></i>
             </a></li>
           </ul>
@@ -239,7 +239,7 @@
 </section>
     <footer id="footer" class="footer-section">
        <div class="container">
-	<a href="https://www.redhat.com/en/global/czech-republic" title="Red Hat Czech, s.r.o."><img src="imgs/Logo_RH.png"></a>
+	<a href="https://www.redhat.com/en/global/czech-republic" title="Red Hat Czech, s.r.o."><img src="/imgs/Logo_RH.png"></a>
        </div>
        <div class="container">
           <!-- Participation Agreements Section -->
