--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Open School 2018">
+    <meta property="og:title" content="Open School">
     <meta property="og:site_name" content="openschool.redhat.com">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://openschool.redhat.com">
-    <meta property="og:image" content="https://openschool.redhat.com/imgs/banner.png">
-    <title>Open School 2018</title>
+    <meta property="og:image" content="https://openschool.redhat.com/imgs/openhouse_logo.png">
+    <title>Open House</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/imgs/favicon.png" type="image/png">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Overpass font -->
-    <link href="fonts/overpass.css" rel="stylesheet">
-    <link href="fonts/overpass-mono.css" rel="stylesheet">
-    
+    <link href="/fonts/overpass.css" rel="stylesheet">
+    <link href="/fonts/overpass-mono.css" rel="stylesheet">
+
     <!-- Font Awesome 4.6.3 -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
 
     <!-- FamFamFam flag icons -->
-    <link rel="stylesheet" href="css/famfamfam-flags.css">
+    <link rel="stylesheet" href="/css/famfamfam-flags.css">
 
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
 
     <!-- Custom CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="/css/scrolling-nav.css" rel="stylesheet">
 
-    <!-- Open School style -->
-    <link href="css/openschool.css" rel="stylesheet">
+    <!-- OpenHouse style -->
+    <link href="/css/openschool.css" rel="stylesheet">
 
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css">
@@ -63,59 +63,27 @@
     <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
 
     <!-- Custom JavaScript -->
-    <script src="js/openhouse.js"></script>
+    <script src="js/openschool.js"></script>
 
   </head>
 
   <body id="page-top" data-spy="scroll" data-target=".navbar-top" data-offset="250">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-top">
-      <div class="main-banner"><div class="banner-image"></div></div>
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Menu</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="#intro" onclick="scroll_to_section('#page-top')">Domů</a></li>
-            <li><a href="schedule.html">Program</a></li>
-            <li><a href="speakers.html">Řečníci</a></li>
-            <li><a href="#venue" onclick="scroll_to_section('#venue')">Místo konání</a></li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right social">
-	   <li><a href="index-en.html" title="English version">
-                <i class="famfamfam-flag-us"></i>
-            </a></li>
-          </ul>
-        </div>
-
-        <!-- /.navbar-collapse -->
-      </div>
-
-      <!-- /.container -->
-    </nav>
-
+	<div class="main-banner">
+		<div class="banner-image"></div>	
+	</div>
     <!-- Home Section -->
     <header id="intro" class="intro-section">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 intro-content">
-            <div class="tagline">NAŠE DVEŘE VÁM BUDOU OTEVŘENÉ</div>
-	    <div class="tagline">4. DUBNA | 09:00 - 13:00</div>
+            <div class="tagline">OUR DOORS ARE OPEN AROUND THE WORLD</div>
+	    <div class="tagline">CHOOSE YOUR COUNTRY OF INTEREST</div>
 
             <div class="intro-text">
-		Registrace na tuto akci je prostřednictvím pozvánky, nicméně, pokud se Vaše střední škola chce této akce zúčastnit a pozvánku neobdržela, neváhejte nás <a href="mailto:mhrusovs@redhat.com">kontaktovat</a>.
-           </div>
+		<a href="/cz">Czech Republic</a>
+            </div>
+          </div>
         </div>
 
 
@@ -123,43 +91,10 @@
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="about-section">
-      <h2>O Open School 2018</h2>
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-	    <p>Open School je obdobou našeho každoročního dne otevřených dveří, avšak primárně se zaměřuje na studenty středních škol. Na Open School se budete moci hlavně zúčastnit přednášek, které nevyžadují nějaké rozsáhlé technické znalosti, ale kladou si za úkol dané technologie představit a ukázat jejich použití v praxi. </p>
-	    <p>Pozvánku na Open School každoročně dostávají pedagogové IT na středních školách, kteří ze svých tříd vyberou žáky, kteří mají největší zájem a předpoklady odnést si z této akce užitečné informace anebo motivaci.</p>
-	    <p>Open School 2018 se koná v nejnovější budově Red Hatu TPB-B v Technologickém parku na ulici Purkyňova 647/111. Akce začíná v 9 hodin ráno a pokračuje až do 13 hodin. Žáci můžou přijít kdykoli v tomto časovém rozpětí podle toho, které přednášky je zajímají. Není tedy nutné přijít ráno přesně na 9 hodinu, ani zůstávat až do konce.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- VENUE -->
-    <section id="venue" class="venue-section">
-      <h2>Mapa akce</h2>
-      <div style="width: 100%; height: 100%">
-         <img src="imgs/map.png" style="width: 100%; height: 100%"/>
-      </div>
-    </section>
-
-    <!-- Leaflet JavaScript  MUST BE CALLED LAST-->
-    <script src="js/leaflet.js"></script>
-
     <footer id="footer" class="footer-section">
        <div class="container">
-	<a href="https://www.redhat.com/en/global/czech-republic" title="Red Hat Czech, s.r.o."><img src="imgs/Logo_RH.png"></a>
+	<a href="https://www.redhat.com/" title="Red Hat"><img src="imgs/Logo_RH.png"></a>
        </div>
-       <div class="container">
-          <!-- Participation Agreements Section -->
-          <div class="col-xs-12 text-center">
-          Máte nějaké další dotazy? Kontaktujte přímo <a href="mailto:mhrusovs@redhat.com">Mateje Hrušovského</a>.
-
-          </div>
-          <!-- END Participation Agreements Section -->
-      </div>
     </footer>
 
   </body>
